FIX Fit sort dropdown to icon on smaller sizes to prevent wrapping

--- a/client/src/containers/Gallery/Gallery.scss
+++ b/client/src/containers/Gallery/Gallery.scss
@@ -18,13 +18,6 @@
   }
 }
 
-.gallery__toolbar {
-  @include media-breakpoint-down(xs) {
-    align-items: flex-end;
-    flex-direction: column;
-  }
-}
-
 .gallery__no-item-notice {
   text-align: center;
   font-size: $font-size-lg;
@@ -117,6 +110,15 @@
   vertical-align: middle;
   padding: $input-btn-padding-y $input-btn-padding-x;
 
+  // Override chosen inline width to fit to icon
+  // scss-lint:disable ImportantRule
+  .chosen-container {
+    @include media-breakpoint-down(sm) {
+      width: auto !important;
+    }
+  }
+  // scss-lint:enable ImportantRule
+
   .chosen-container-active {
     .chosen-single {
       outline: 1px dotted $component-active-border-color;
@@ -160,6 +162,8 @@
   }
 
   .chosen-drop {
+    min-width: 160px;
+    right: 0;
     border-radius: 3px;
     box-shadow: $dropdown-shadow;
     border: 0;
@@ -184,12 +188,6 @@
 
 .gallery__view-change-button .icon:before {
   vertical-align: middle;
-}
-
-.gallery__action-buttons {
-  @include media-breakpoint-down(xs) {
-    order: 2;
-  }
 }
 
 .gallery__state-buttons {
